# led_ambience

./: .gitignore  README.md  pyproject.toml
src/led_ambience/: generate_ambience.py  generate_screen.py  generate_strip.py
test/led_ambiance/: test_strip.py
